--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,20 @@
 <resources>
     <string name="app_name">CapstoneProject</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="sign_up">SIGN UP</string>
+    <string name="password">Password</string>
+    <string name="email">Email</string>
+    <string name="surname">Surname</string>
+    <string name="name">Name</string>
+    <string name="title">Hitman\'s Wife\'s Bodyguard</string>
+    <string name="rating">7.8</string>
+    <string name="genre">Action, Comedy, Crime</string>
+    <string name="year">2016</string>
+    <string name="sign_in">SIGN IN</string>
+    <string name="create_account">Create an account</string>
+    <string name="description_header">Description</string>
+    <string name="description">When a ronin requesting seppuku at a feudal lord\'s palace is told of the brutal suicide of another ronin who previously visited, he reveals how their pasts are intertwined - and in doing so challenges the clan\'s integrity.</string>
+    <string name="menu_home">Home</string>
+    <string name="menu_favorite">Favorite</string>
+    <string name="menu_logout">Logout</string>
 </resources>
