CapstoneProject | Add splash screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="imdbLink">Go to IMDb -></string>
     <string name="sign_in_empty">Email and Password cannot be empty</string>
     <string name="sign_up_empty">Name, surname, email, and password cannot be empty</string>
+    <string name="popzone">PopZone</string>
 </resources>
