--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="logout_successful">Logout successful</string>
+    <string name="empty">Empty</string>
 </resources>
