CapstoneProject | Code refactor

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,8 +23,8 @@
     <string name="imdbLink">Go to IMDb -></string>
     <string name="sign_in_empty">Email and Password cannot be empty</string>
     <string name="sign_up_empty">Name, surname, email, and password cannot be empty</string>
-    <string name="popzone">PopZone</string>
-    <string name="welcome_popzone">Welcome PopZone</string>
+    <string name="watch_zone">WatchZone</string>
+    <string name="welcome_watchZone">Welcome WatchZone</string>
     <string name="info">Find the best 100 films and series in our app. Save your favorites and access IMDb for more information.</string>
     <string name="logout_title">Logout</string>
     <string name="logout_message">Are you sure you want to log out?</string>
